# arcb

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  THEORY.md
.github/workflows/: release.yml
benches/: throughput.rs
examples/: arcb_cli.rs  arcb_vs_gzip.rs  bench_compare.rs  benchmark.rs  test_number.rs
fuzz/fuzz_targets/: roundtrip.rs
scripts/: README_packaging.md  giai_nen.bat  nen.sh
src/: adaptive_model.rs  bitstream.rs  decoder.rs  encoder.rs  error.rs  lib.rs  options.rs  superblock.rs
tests/: edge_cases.rs  integration_test.rs  property_tests.rs
