[package]
name = "arcb"
version = "0.1.0"
edition = "2024"
description = "Adaptive Range Coding for Base-10 Digits — lossless decimal digit string compressor"
license = "MIT"
repository = "https://github.com/notareal1/arcb"
authors = ["notareal1"]
keywords = ["compression", "arithmetic-coding", "digits"]
categories = ["compression"]

[dependencies]
bitstream-io = "2.0"
constriction = "0.4"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"], optional = true }
rayon = { version = "1.10", optional = true }

[features]
default = ["cli"]
cli = ["dep:clap"]
parallel = ["dep:rayon"]

[[bin]]
name = "arcb"
path = "src/bin/arcb.rs"
required-features = ["cli"]

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
flate2 = "1.0"
bzip2 = "0.4"

[[bench]]
name = "throughput"
harness = false

[profile.release]
opt-level = 3
lto = true
